--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="images/MyImg.jpeg" alt="Image not found"></td>
+      <td>  <img src="MyImg.jpeg" alt="Image not found"></td>
       <td><h1>Dmitry Pchelintsev</h1>
       <p><em>Founder and CEO in <b>Automate</b></em></p>
       <strong><a href="https://github.com/" target="_blank">Github Profile</a></strong>
